package BusinessLogic;

public interface InteligenciaArtificial {
    boolean buscarTipoArsenal(String tipoArsenal);
}
